--- a/COURSERA_TEST_COMPLETE.ipynb
+++ b/COURSERA_TEST_COMPLETE.ipynb
@@ -75,7 +75,7 @@
     "tags": []
    },
    "source": [
-    "### Arithmetic expression examples\n",
+    "### Arithmetic expression examples:\n",
     "\n",
     "* 1+1 = 2\n",
     "* 1-1 = 0\n",
@@ -141,6 +141,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Objectives of this notebook\n",
+    "\n",
+    "* chack your knowlage on jupyter notebook\n",
+    "* chack your knowlage on Data Sciance\n",
+    "* chack your knowlage on markdowns\n",
+    "* chack your knowlage on basic commands in python"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Author: Lara"
    ]
   },
@@ -154,9 +166,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-python-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -168,7 +180,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.12"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
